<resources>
    <string name="app_name">QRCode</string>

    <string name="normal_qr_code_title">生成一般二维码</string>
    <string name="special_qr_code_title">生成特殊二维码</string>
    <string name="special_diy_qr_code_title">生成特殊DIY二维码</string>

    <string name="button_sure">确定</string>

    <string name="title_theme_color">Color</string>
    <string name="title_theme_cook">Cook</string>
    <string name="title_theme_city">City</string>

    <string name="prompt_input_qr_code_content">请输入一般二维码内容</string>
    <string name="prompt_input_special_qr_code_content">请输入特殊二维码内容</string>

    <string name="prompt_create_qr_code_error">生成二维码失败</string>
</resources>
