<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/normal_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/normal_qr_code_title"
        app:layout_constraintBottom_toTopOf="@+id/special_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/special_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/special_qr_code_title"
        app:layout_constraintBottom_toTopOf="@+id/special_diy_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_code" />

    <TextView
        android:id="@+id/special_diy_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/special_diy_qr_code_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/special_code" />
</android.support.constraint.ConstraintLayout>